Fix shifting components because of scrollbar (caused by custom body css)

--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,7 @@ body {
 
 html,
 body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  scrollbar-gutter: stable;
+
 }
 
 h1 {
